TouchEvent is not handled after releasing any point among touched points. https://bugs.webkit.org/show_bug.cgi?id=132043

Reviewed by Benjamin Poulain.

Handle TouchEvent until all touched points are released by setting
trackingTouchEvents variable to false when all points are released.

* UIProcess/WebPageProxy.cpp:
(WebKit::areAllTouchPointsReleased):
(WebKit::WebPageProxy::handleTouchEventSynchronously):
(WebKit::WebPageProxy::handleTouchEventAsynchronously):
(WebKit::WebPageProxy::handleTouchEvent):


Canonical link: https://commits.webkit.org/150276@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167867 268f45cc-cd09-0410-ab3c-d52691b4dbfc