Source/WebKit2/UIProcess/WebPageProxy.cpp
@@ -1492,6 +1492,16 @@ bool WebPageProxy::shouldStartTrackingTouchEvents(const WebTouchEvent& touchStar
 #endif // ENABLE(ASYNC_SCROLLING)
     return true;
 }
+
+static bool areAllTouchPointsReleased(const WebTouchEvent& event)
+{
+    for (const auto& touchPoint : event.touchPoints()) {
+        if (touchPoint.state() != WebPlatformTouchPoint::TouchReleased && touchPoint.state() != WebPlatformTouchPoint::TouchCancelled)
+            return false;
+    }
+
+    return true;
+}
 #endif
 
 #if ENABLE(IOS_TOUCH_EVENTS)
@@ -1513,7 +1523,7 @@ void WebPageProxy::handleTouchEventSynchronously(const NativeWebTouchEvent& even
     m_pageClient.doneWithTouchEvent(event, handled);
     m_process->responsivenessTimer()->stop();
 
-    if (event.type() == WebEvent::TouchEnd || event.type() == WebEvent::TouchCancel)
+    if (areAllTouchPointsReleased(event))
         m_isTrackingTouchEvents = false;
 }
 
@@ -1529,10 +1539,9 @@ void WebPageProxy::handleTouchEventAsynchronously(const NativeWebTouchEvent& eve
 
     m_process->send(Messages::EventDispatcher::TouchEvent(m_pageID, event), 0);
 
-    if (event.type() == WebEvent::TouchEnd || event.type() == WebEvent::TouchCancel)
+    if (areAllTouchPointsReleased(event))
         m_isTrackingTouchEvents = false;
 }
-
 #elif ENABLE(TOUCH_EVENTS)
 void WebPageProxy::handleTouchEvent(const NativeWebTouchEvent& event)
 {
@@ -1569,7 +1578,7 @@ void WebPageProxy::handleTouchEvent(const NativeWebTouchEvent& event)
         }
     }
 
-    if (event.type() == WebEvent::TouchEnd || event.type() == WebEvent::TouchCancel)
+    if (areAllTouchPointsReleased(event))
         m_isTrackingTouchEvents = false;
 }
 #endif // ENABLE(TOUCH_EVENTS)
